--- a/app/Resources/views/site/topo.html.twig
+++ b/app/Resources/views/site/topo.html.twig
@@ -13,10 +13,34 @@
                 <li class="node-2 parent">
                     <a href="{{ path('product_category_sub_list', {category_slug: 'fitness', subcategory_slug: 'colecao'}) }}">Malhas</a>
                     <ul>
-                        <li><a href="{{ path('product_category_sub_list', {category_slug: 'fitness', subcategory_slug: 'colecao'}) }}">Fitness</a></li>
-                        <li><a href="{{ path('product_category_sub_list', {category_slug: 'lingerie', subcategory_slug: 'colecao'}) }}">Lingerie</a></li>
-                        <li><a href="{{ path('product_category_sub_list', {category_slug: 'escolar', subcategory_slug: 'colecao'}) }}">Escolar</a></li>
-                        <li><a href="{{ path('product_category_sub_list', {category_slug: 'praia', subcategory_slug: 'colecao'}) }}">Praia</a></li>
+                        <li>
+                            <a href="{{ path('product_category_sub_list', {category_slug: 'fitness', subcategory_slug: 'colecao'}) }}">
+                                Fitness
+                                <span class="liso" data-url="{{ path('home_homepage') }}">Liso</span>
+                                <span class="estampado" data-url="{{ path('home_homepage') }}">Estampado</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="{{ path('product_category_sub_list', {category_slug: 'lingerie', subcategory_slug: 'colecao'}) }}">
+                                Lingerie
+                                <span class="liso" data-url="{{ path('home_homepage') }}">Liso</span>
+                                <span class="estampado" data-url="{{ path('home_homepage') }}">Estampado</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="{{ path('product_category_sub_list', {category_slug: 'escolar', subcategory_slug: 'colecao'}) }}">
+                                Escolar
+                                <span class="liso" data-url="{{ path('home_homepage') }}">Liso</span>
+                                <span class="estampado" data-url="{{ path('home_homepage') }}">Estampado</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="{{ path('product_category_sub_list', {category_slug: 'praia', subcategory_slug: 'colecao'}) }}">
+                                Praia
+                                <span class="liso" data-url="{{ path('home_homepage') }}">Liso</span>
+                                <span class="estampado" data-url="{{ path('home_homepage') }}">Estampado</span>
+                            </a>
+                        </li>
                     </ul>
                 </li>
                 <li class="node-3"><a href="{{ path('site_page_services') }}">Prestação de Serviços</a></li>
