Item 538 - Aplicar filtro de lisos e estampados: - Criação das opções lisos e estampados.

--- a/app/Resources/views/site/topo.html.twig
+++ b/app/Resources/views/site/topo.html.twig
@@ -16,29 +16,29 @@
                         <li>
                             <a href="{{ path('product_category_sub_list', {category_slug: 'fitness', subcategory_slug: 'colecao'}) }}">
                                 Fitness
-                                <span class="liso" data-url="{{ path('home_homepage') }}">Liso</span>
-                                <span class="estampado" data-url="{{ path('home_homepage') }}">Estampado</span>
+                                <span class="liso" data-url="{{ path('product_category_sub_list', {category_slug: 'fitness', subcategory_slug: 'todos', textura: 'lisos'}) }}">Liso</span>
+                                <span class="estampado" data-url="{{ path('product_category_sub_list', {category_slug: 'fitness', subcategory_slug: 'todos', textura: 'estampados'}) }}">Estampado</span>
                             </a>
                         </li>
                         <li>
                             <a href="{{ path('product_category_sub_list', {category_slug: 'lingerie', subcategory_slug: 'colecao'}) }}">
                                 Lingerie
-                                <span class="liso" data-url="{{ path('home_homepage') }}">Liso</span>
-                                <span class="estampado" data-url="{{ path('home_homepage') }}">Estampado</span>
+                                <span class="liso" data-url="{{ path('product_category_sub_list', {category_slug: 'lingerie', subcategory_slug: 'todos', textura: 'lisos'}) }}">Liso</span>
+                                <span class="estampado" data-url="{{ path('product_category_sub_list', {category_slug: 'lingerie', subcategory_slug: 'todos', textura: 'estampados'}) }}">Estampado</span>
                             </a>
                         </li>
                         <li>
                             <a href="{{ path('product_category_sub_list', {category_slug: 'escolar', subcategory_slug: 'colecao'}) }}">
                                 Escolar
-                                <span class="liso" data-url="{{ path('home_homepage') }}">Liso</span>
-                                <span class="estampado" data-url="{{ path('home_homepage') }}">Estampado</span>
+                                <span class="liso" data-url="{{ path('product_category_sub_list', {category_slug: 'escolar', subcategory_slug: 'todos', textura: 'lisos'}) }}">Liso</span>
+                                <span class="estampado" data-url="{{ path('product_category_sub_list', {category_slug: 'escolar', subcategory_slug: 'todos', textura: 'estampados'}) }}">Estampado</span>
                             </a>
                         </li>
                         <li>
                             <a href="{{ path('product_category_sub_list', {category_slug: 'praia', subcategory_slug: 'colecao'}) }}">
                                 Praia
-                                <span class="liso" data-url="{{ path('home_homepage') }}">Liso</span>
-                                <span class="estampado" data-url="{{ path('home_homepage') }}">Estampado</span>
+                                <span class="liso" data-url="{{ path('product_category_sub_list', {category_slug: 'praia', subcategory_slug: 'todos', textura: 'lisos'}) }}">Liso</span>
+                                <span class="estampado" data-url="{{ path('product_category_sub_list', {category_slug: 'praia', subcategory_slug: 'todos', textura: 'estampados'}) }}">Estampado</span>
                             </a>
                         </li>
                     </ul>
