--- a/src/SITE/ProductCategoryBundle/Resources/views/Product/index.html.twig
+++ b/src/SITE/ProductCategoryBundle/Resources/views/Product/index.html.twig
@@ -66,7 +66,7 @@
                         PA = Poliamida | PES = Poliéster<br>
                         PUE = Elastano | CV = Viscose
                         {% if Product.attachment | length %}
-                            <a href="{{ asset(Product.attachment) }}" class="bt-default">Ficha técnica</a>
+                            <a href="{{ asset(Product.attachment) }}" class="bt-default" target="_blank">Ficha técnica</a>
                         {% endif %}
                     </aside>
                 </article>
