--- a/app/Resources/views/fields.html.twig
+++ b/app/Resources/views/fields.html.twig
@@ -44,7 +44,7 @@
 
         {% if type == 'file' and form.vars.data is not null %}
             <div class="col-md-3">
-                <img height="34" src="{{ asset(form.vars.data) }}" /><br/>
+                <img height="34" src="{{ asset(form.vars.data) }}" data-pdf="{{ asset('cms/images/pdf-logo.jpg') }}" class="img-input" /><br/>
             </div>
         {% endif %}
 
