--- a/web/site/css/style.css
+++ b/web/site/css/style.css
@@ -777,10 +777,10 @@ main {
 		margin-right: 20px;
 	}
 	.filtro.filtro-mapa select.select {
-		width: 370px;
+		width: 270px;
 	}
 	.filtro.filtro-mapa span.select {
-		width: 370px;
+		width: 270px;
 		background: url(../images/seta-select.png) no-repeat 330px center #fff;
 	}
 
@@ -1553,7 +1553,100 @@ span.upload-path {
 	/* ... */
 
 }
-
+.white_column{
+	width:30%;
+	margin-right:5%;
+	background-color:#fff;
+	float:left;
+	height:672px;
+	margin-bottom:67px;
+	position:relative;
+	box-sizing:border-box;
+	padding-top:12px;
+	padding-left:12px;
+}
+.scrolling{
+	width:100%;
+	height:90%;
+	overflow: auto;
+}
+.white_column.opacity{
+	opacity:0.5;
+}
+.white_column.no-margin-right{
+	margin-right:0px;
+}
+.white_column .wc_title{
+	font-family: 'bebas_neuebold';
+	color: #999999;
+	text-transform:uppercase;
+	font-size: 20px;
+	letter-spacing:1px;
+	margin-bottom:20px;
+}
+.white_column .item{
+	font-family: 'bebas_neueregular';
+	color: #999999;
+	text-transform:uppercase;
+	font-size: 20px;
+	letter-spacing:1px;
+	box-sizing:border-box;
+	padding:10px;
+	-webkit-transition:0.5s;
+	-moz-transition:0.5s;
+	-o-transition:0.5s;
+	transition:0.5s;
+	cursor:pointer;
+}
+.white_column .item:hover{
+	font-family: 'bebas_neueregular';
+	background-color: #999999;
+	color:#fff;
+	text-transform:uppercase;
+	font-size: 20px;
+	letter-spacing:1px;
+	box-sizing:border-box;
+	padding:10px;
+}
+.white_column .item.active{
+	font-family: 'bebas_neueregular';
+	background:url(../images/arrow.jpg) no-repeat 100% 50%;
+	background-color: #999999;
+	color:#fff;
+	text-transform:uppercase;
+	font-size: 20px;
+	letter-spacing:1px;
+	box-sizing:border-box;
+	padding:10px;
+}
+.r_item{
+	margin-bottom:20px;
+}
+.ri_title{
+	font-family: Tahoma;
+	color: #999999;
+	font-size: 14px;
+	color: #555;
+	font-weight:bold;
+}
+.ri_city{
+	font-family: Tahoma;
+	color: #999999;
+	font-size: 14px;
+	margin-bottom:5px;
+}
+.ri_phone{
+	font-family: Tahoma;
+	color: #999999;
+	font-size: 14px;
+}
+.ri_email{
+	font-family: Tahoma;
+	color: #999999;
+	font-size: 10px;
+	text-transform:underline;
+	margin-top:5px;
+}
 /* MEDIA ----------------------------------------------------------- */
 
 
